--- a/frontend/react/auctionfrontend/src/assets/css/custom.css
+++ b/frontend/react/auctionfrontend/src/assets/css/custom.css
@@ -1,3 +1,8 @@
+body {
+  font-family: 'Poppins', sans-serif;
+  line-height: 1.6 !important;
+}
+
 .bg-image-vertical {
   position: relative;
   overflow: hidden;
